Recipes added to index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="Recipes/jollof_rice.html">Jollof Rice</a>
+    <ul>
+        <li><a href="Recipes/jollof_rice.html">Jollof Rice</a></li>
+        <li><a href="Recipes/fried_rice.html">Fried Rice</a></li>
+        <li><a href="Recipes/jerk_chicken.html">Fried Rice</a></li>
+    </ul>
 </body>
 </html>
