Updated recipes containing ingredients and steps

--- a/Recipes/jerk_chicken.html
+++ b/Recipes/jerk_chicken.html
@@ -9,7 +9,7 @@
 <body>
 
     <!--Recipr Title-->
-    <h1>Jollof Rice</h1>
+    <h1>Jerk Chicken</h1>
     
       <!--Jollof rice image and description-->
     <img src="../images/jollofrice.jpg" alt="Jollof Rice">
