--- a/Recipes/fried_rice.html
+++ b/Recipes/fried_rice.html
@@ -9,7 +9,7 @@
 <body>
 
     <!--Recipr Title-->
-    <h1>Jollof Rice</h1>
+    <h1>Fried Rice</h1>
     
       <!--Jollof rice image and description-->
     <img src="../images/jollofrice.jpg" alt="Jollof Rice">
