Updated food recipes containing ingredients and steps

--- a/Recipes/fried_rice.html
+++ b/Recipes/fried_rice.html
@@ -8,51 +8,33 @@
 <header><a href="../index.html">Home</a></header>
 <body>
 
-    <!--Recipr Title-->
+    <!--Recipe Title-->
     <h1>Fried Rice</h1>
     
-      <!--Jollof rice image and description-->
-    <img src="../images/jollofrice.jpg" alt="Jollof Rice">
-    <h3>Chef John's Jollof Rice</h3>
-    <p>This is a foolproof recipe for cooking Jollof rice, West Africa’s most popular dish. I
-     like to serve it as a side with my West African-style grilled beef (Suya), but it can also
-      be a main course.</p>
+      <!--Fried rice image and description-->
+    <img src="../images/friedrice.jpg" alt="Fried Rice">
+    <h3>Fried Rice</h3>
+    <p>This Easy Fried Rice has always been one of the most-loved recipes on my site! I have made different versions, but this classic recipe is the one everyone keeps coming back to because it’s so easy and delicious!</p>
 
-       <!--Recipe Ingredients-->
+       <!-- List of recipe Ingredients-->
 <h2>Ingredients</h2>
 <ul>
-    <li>1 large, ripe tomato, cored and quartered</li>
-    <li>1 large red bell pepper, seeded and roughly chopped</li>
-    <li>1 whole habanero pepper, stem removed</li>
-    <li>1 whole Fresno chili, or jalapeño, stem removed</li>
-    <li>4 cloves garlic, peeled</li>
-    <li>1 tablespoon minced ginger</li>
-    <li>2 cups water</li>
-    <li>1/3 cup olive oil</li>
-    <li>1 red onion, diced</li>
-    <li>1 teaspoon salt, plus more to taste</li>
-    <li>1/4 cup tomato paste</li>
-    <li>2 tablespoons smoked paprika</li>
-    <li>1 teaspoon curry powder</li>
-    <li>1 teaspoon cumin</li>
-    <li>1 teaspoon dried thyme</li>
-    <li>1/2 teaspoon freshly ground black pepper</li>
-    <li>1/4 teaspoon turmeric</li>
-    <li>2 ¼ cups basmati rice</li>
-    <li>1 bay leaf</li>
-    <li>1 tablespoon chicken bouillon paste</li>
-    <li>1/4 cup chopped green onion for garnish (optional)</li>
-    <li>1/4 cup chopped cilantro, for garnish (optional)</li>
+    <li>Cooked rice</li>
+    <li>Eggs</li>
+    <li>Peas & carrots</li>
+    <li>Green onion</li>
+    <li>Soy sauce</li>
+    <li>Sesame oil</li>
+    <li>Diced Onion</li>
 </ul>
 
+<!--Cooking steps-->
 <h2>Steps</h2>
 <ol>
-    <li>Combine tomato, red bell pepper, habanero pepper, fresno chili, garlic, ginger, and water in a blender for the sauce. Blend on high until smooth and set aside.</li>
-    <li>Heat olive oil in a saucepan over medium heat. Add onion and salt and sauté until onion starts to soften, 4 to 5 minutes. Clear space in the middle of the pan, add tomato paste, and sauté for 2 to 3 minutes. Season with paprika, curry powder, cumin, thyme, pepper, and turmeric; continue cooking for 1 to 2 minutes until everything is well combined.</li>
-    <li>Turn off the heat, and stir in the rice, making sure every grain of rice is coated with the oil-tomato mixture. Add bay leaf and chicken bouillon paste.</li>
-    <li>Turn heat to high, stir in tomato sauce, and bring to a vigorous simmer. Cover with a tight fitting lid, reduce heat to medium-low, and simmer for 20 minutes. Do not remove the lid or stir rice.</li>
-    <li>Turn off heat after 20 minutes, and set the timer for 12 minutes. Allow rice to sit and do not remove the lid.</li>
-    <li>After the 12 minutes are up, remove lid, and fluff rice with a fork, separating all the grains. Serve garnished with green onions and chopped cilantro.</li>
+    <li>Preheat a large skillet or wok to medium heat. Add sesame oil, chopped white onion, and frozen peas and carrots, then cook until tender..</li>
+    <li>Slide the vegetables to the side and then pour the eggs onto the other side of the skillet. Using a spatula, scramble the eggs. Once cooked, then you can mix the eggs with the vegetables.</li>
+    <li>Add cooked white rice to the veggie and egg mixture, then pour soy sauce on top. Stir the rice and veggie mixture until warmed through and combined.</li>
+    <li>Top with green onions, if desired, and serve immediately.</li>
 </ol>
 
 </body>
