--- a/Recipes/jerk_chicken.html
+++ b/Recipes/jerk_chicken.html
@@ -8,51 +8,56 @@
 <header><a href="../index.html">Home</a></header>
 <body>
 
-    <!--Recipr Title-->
+    <!--Recipe Title-->
     <h1>Jerk Chicken</h1>
     
-      <!--Jollof rice image and description-->
-    <img src="../images/jollofrice.jpg" alt="Jollof Rice">
-    <h3>Chef John's Jollof Rice</h3>
-    <p>This is a foolproof recipe for cooking Jollof rice, West Africa’s most popular dish. I
-     like to serve it as a side with my West African-style grilled beef (Suya), but it can also
-      be a main course.</p>
+      <!--Jerk chicken image and description-->
+    <img src="../images/jerkchicken.jpg" alt="Jerk Chicken">
+    <h3>Jerk Chicken</h3>
+    <p>Jerk chicken is Jamaican street food, but jerk has evolved over the years to mean so much 
+        more to Jamaica’s heritage. In the tourist towns of Jamaica, practically every menu will have at 
+        least one jerk dish. Commercializing jerk in this way is a departure from its humble roots as it 
+        is not something most Jamaicans even cook at home. Jerk originated in the cool hills of Portland
+         by the Maroons, Jamaica’s runaway slaves. Authentic jerk food has unique spicing, but also a unique 
+         cooking method. It is still debatable that jerk cannot be made at home in an oven and must be done over
+          an open fire of coals and pimento wood for it to truly be considered jerk. 
+        </p>
+
+        <p>The evolution of jerk also meant an evolution of the flavors. In the beginning, jerk spicing was only 
+            used on wild hogs and included wild cinnamon and nutmeg in the ingredient list. In this recipe, I 
+            have skipped the cinnamon and nutmeg for a more spicy, savory and pungent jerk flavor. 
+        </p>
 
        <!--Recipe Ingredients-->
 <h2>Ingredients</h2>
 <ul>
-    <li>1 large, ripe tomato, cored and quartered</li>
-    <li>1 large red bell pepper, seeded and roughly chopped</li>
-    <li>1 whole habanero pepper, stem removed</li>
-    <li>1 whole Fresno chili, or jalapeño, stem removed</li>
-    <li>4 cloves garlic, peeled</li>
-    <li>1 tablespoon minced ginger</li>
-    <li>2 cups water</li>
-    <li>1/3 cup olive oil</li>
-    <li>1 red onion, diced</li>
-    <li>1 teaspoon salt, plus more to taste</li>
-    <li>1/4 cup tomato paste</li>
-    <li>2 tablespoons smoked paprika</li>
-    <li>1 teaspoon curry powder</li>
-    <li>1 teaspoon cumin</li>
-    <li>1 teaspoon dried thyme</li>
-    <li>1/2 teaspoon freshly ground black pepper</li>
-    <li>1/4 teaspoon turmeric</li>
-    <li>2 ¼ cups basmati rice</li>
-    <li>1 bay leaf</li>
-    <li>1 tablespoon chicken bouillon paste</li>
-    <li>1/4 cup chopped green onion for garnish (optional)</li>
-    <li>1/4 cup chopped cilantro, for garnish (optional)</li>
+    <li>6 whole chicken legs (about 3 1/2 pounds total)</li>
+    <li>5 medium scallions</li>
+    <li>1/2 medium yellow onion</li>
+    <li>5 cloves garlic</li>
+    <li>1 (2-inch) piece ginger</li>
+    <li>10 sprigs fresh thyme</li>
+    <li>2 scotch bonnet peppers</li>
+    <li>1/4 cup whole allspice berries</li>
+    <li>1/4 cup vegetable oil</li>
+    <li>2 tablespoons all-purpose seasoning</li>
+    <li>1 tablespoon packed light or dark brown sugar</li>
+    <li>1 tablespoon gravy master or Grace browning</li>
+    <li>1 tablespoon kosher salt</li>
+    <li>1 tablespoon coarsely ground black pepper</li>
+    <li>2 teaspoons onion powder</li>
+    <li>2 teaspoons smoked paprika</li>
 </ul>
 
+<!--Cooking steps-->
 <h2>Steps</h2>
 <ol>
-    <li>Combine tomato, red bell pepper, habanero pepper, fresno chili, garlic, ginger, and water in a blender for the sauce. Blend on high until smooth and set aside.</li>
-    <li>Heat olive oil in a saucepan over medium heat. Add onion and salt and sauté until onion starts to soften, 4 to 5 minutes. Clear space in the middle of the pan, add tomato paste, and sauté for 2 to 3 minutes. Season with paprika, curry powder, cumin, thyme, pepper, and turmeric; continue cooking for 1 to 2 minutes until everything is well combined.</li>
-    <li>Turn off the heat, and stir in the rice, making sure every grain of rice is coated with the oil-tomato mixture. Add bay leaf and chicken bouillon paste.</li>
-    <li>Turn heat to high, stir in tomato sauce, and bring to a vigorous simmer. Cover with a tight fitting lid, reduce heat to medium-low, and simmer for 20 minutes. Do not remove the lid or stir rice.</li>
-    <li>Turn off heat after 20 minutes, and set the timer for 12 minutes. Allow rice to sit and do not remove the lid.</li>
-    <li>After the 12 minutes are up, remove lid, and fluff rice with a fork, separating all the grains. Serve garnished with green onions and chopped cilantro.</li>
+    <li>Prepare the following, placing each in a blender as you complete it: Trim and coarsely chop 5 medium scallions and 1/2 medium yellow onion. Peel 5 garlic cloves. Peel and finely grate 1 (2-inch piece) ginger until you have 1 tablespoon.</li>
+    <li>Add 10 fresh thyme sprigs (including stems), 2 whole scotch bonnet peppers, 1/4 cup whole allspice berries, 1/4 cup vegetable oil, 2 tablespoons all-purpose seasoning, 1 tablespoon packed brown sugar, 1 tablespoon gravy master or Grace browning, 1 tablespoon kosher salt, 1 tablespoon coarsely ground black pepper, 2 teaspoons onion powder, and 2 teaspoons smoked paprika. Blend until smooth, about 1 minute. Transfer to a large bowl.</li>
+    <li>Pat 6 whole chicken legs dry with paper towels. Use the tip of a knife to make a few short slits about 1/2-inch deep on both sides of each leg, keeping the skin in one piece and not cutting all the way through to the bone. Add to the marinade and massage the marinade into the chicken with your hands, getting some it into the slits. Cover and refrigerate for at least 4 hours or preferably overnight.</li>
+    <li>Arrange a rack in the middle of the oven and heat the oven to 400ºF. Meanwhile, let the chicken sit at room temperature. Line a rimmed baking sheet with aluminum foil.</li>
+    <li>Place the chicken legs skin-side up on the baking sheet; discard the remaining marinade. Tent the chicken very loosely with aluminum foil, making sure it does not touch the chicken.</li>
+    <li>Roast for 1 hour. Uncover and roast for 15 to 20 minutes more. If desired, broil the chicken on the lowest setting for the last 5 minutes until charred in spots for a darker color.</li>
 </ol>
 
 </body>
