--- a/Recipes/jollof_rice.html
+++ b/Recipes/jollof_rice.html
@@ -8,7 +8,7 @@
 <header><a href="../index.html">Home</a></header>
 <body>
 
-    <!--Recipr Title-->
+    <!--Recipe Title-->
     <h1>Jollof Rice</h1>
     
       <!--Jollof rice image and description-->
@@ -45,6 +45,7 @@
     <li>1/4 cup chopped cilantro, for garnish (optional)</li>
 </ul>
 
+<!--Cooking steps-->
 <h2>Steps</h2>
 <ol>
     <li>Combine tomato, red bell pepper, habanero pepper, fresno chili, garlic, ginger, and water in a blender for the sauce. Blend on high until smooth and set aside.</li>
