Added links to recipe pages for navigation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="Recipes/jollof_rice.html">Jollof Rice</a></li>
         <li><a href="Recipes/fried_rice.html">Fried Rice</a></li>
-        <li><a href="Recipes/jerk_chicken.html">Fried Rice</a></li>
+        <li><a href="Recipes/jerk_chicken.html">Jerk Chicken</a></li>
     </ul>
 </body>
 </html>
